# pupman

./: .rustfmt.toml  .typos.toml  Cargo.toml  README.md
.github/workflows/: ci.yml  test.yml
src/: lib.rs  lxc.rs  main.rs  metadata.rs
src/app/: event.rs  mod.rs  state.rs  ui.rs
src/app/state/: mod.rs  tests.rs
src/app/ui/: findings_list.rs  footer.rs  host_mapping_panel.rs  logs_page.rs  lxc_config_panel.rs  mod.rs  rootfs_panel.rs
src/fs/: mod.rs  monitor.rs  reader.rs  subid.rs
src/linux/: mod.rs
src/lxc/: config.rs  mod.rs  section.rs  section_mut.rs
src/proxmox/: lxc.rs  mod.rs  pveversion.rs
