[package]
authors = ["Daniel Kolsoi <thadan64@gmail.com>"]
description = ""
edition = "2024"
license = "Apache-2.0"
name = "pupman"
readme = "README.md"
version = "0.1.0"

[dependencies]
color-eyre = "0.6.2"
crossterm = "0.28.1"
dirs = "6.0.0"
etc-passwd = "0.2.2"
nix = "0.30.1"
ratatui = "0.29"
tempfile = "3.2"
