[package]
authors = ["Daniel Kolsoi <thadan64@gmail.com>"]
description = ""
edition = "2024"
license = "Apache-2.0"
name = "pupman"
readme = "README.md"
version = "0.1.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.28.1"
dirs = "6.0.0"
etc-passwd = "0.2.2"
indexmap = "2.9"
nix = "0.30.1"
notify = "8.0.0"
ratatui = "0.29"
tempfile = "3.2"
tui-widgets = { version = "0.4.1", default-features = false, features = [
    "popup",
    "tui-prompts",
] }
